# registry

./: .dockerignore  .gitignore  AGENTS.md  DESIGN.md  README.md  fabfile.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  tailwind.config.js  tsconfig.json  vite.config.js
backend/: asgi.py  auth.py  settings.py  urls.py  utils.py
backend/registry/: admin.py  admin_forms.py  admin_views.py  apps.py  consumers.py  forms.py  importer.py  media.py  models.py  urls.py  views.py
backend/registry/api/: serializers.py  urls.py  views.py
backend/registry/migrations/: 0001_initial.py  0002_alter_group_managers_alter_license_managers_and_more.py  0003_studydesigncollection_studydesign_collection.py
backend/registry/tests/: test_activation.py  test_import.py  test_password_reset.py
backend/settings/: base.py  develop.py  production.py
backend/templates/: base.html
backend/templates/partials/: filter_field.html  form_errors.html  form_field.html  notification.html
backend/templates/registration/: activation.html  activation_confirm.html  (+13 more)
backend/templatetags/: backend.py
deployment/: Dockerfile  docker-compose.yaml  nginx-shared.conf  nginx.conf
frontend/: main.js
frontend/studyDesignMaps/: App.tsx  Cursors.tsx  Node.tsx  NodeCreator.tsx  NodeEditor.tsx  NodeFilters.tsx  OnlineUsers.tsx  ResourceSelector.tsx  SelectMultiple.tsx  Tooltip.tsx  main.tsx  shortUUID.ts  useAwarenessState.ts  useCursorStateSynced.ts  useEdgesStateSynced.ts  useFetch.ts  useNodesStateSynced.ts  useStudyDesignMapState.tsx  useYjsFlow.ts  utils.ts
frontend/styles/: main.sass
hocuspocus/: package-lock.json  package.json  server.ts  tsconfig.json
instancemaps/: .gitignore  App.fs  App.fs.js  App.fsproj  package.json
registry/: admin.py  forms.py  importer.py  media.py  models.py  urls.py  views.py
registry/api/: serializers.py  urls.py  views.py
registry/migrations/: 0001_initial.py  0002_alter_group_id_alter_license_description_and_more.py  0003_organisation_short_name_alter_organisation_name.py  0004_alter_resource_kind_alter_resource_license_and_more.py  0005_rename_link_resource_data_link.py  0006_alter_resource_data_link.py  0007_personrole_remove_resource_contributors_and_more.py  0008_organisation_country.py  0009_resourcestatus_and_more.py  0010_alter_resourcestatus_name.py  0011_contributor_remove_studydesign_contributors_and_more.py  0012_alter_contributor_object_id.py  0013_alter_contributor_unique_together.py  0014_alter_resource_groups_alter_resource_kind.py  0015_alter_studydesign_groups.py  0016_alter_contributor_options_alter_person_options.py  0017_alter_person_orcid.py  0018_resource_archived_studydesign_archived.py  0019_alter_resource_kind.py  0020_alter_resource_data_file_alter_resource_data_link.py  0021_studydesign_instance_map_link.py  0022_resourcecollection.py  0023_resource_harmonised_json_resourcefile.py  0024_alter_resourcestatus_options_and_more.py
registry/templatetags/: registry.py
(+65 files in other folders)
