[project]
name = "registry"
requires-python = "~=3.13"
dependencies = [
    "django~=5.1.0",
    "shortuuid~=1.0",
    "django-countries~=7.6",
    "django-docopt-command~=1.1",
    "django-admin-sortable2~=2.2",
    "django-convenient-formsets~=2.0",
    "django-widget-tweaks~=1.5",
    "djangorestframework~=3.15",
    "django-markdownify~=0.9",
    "psycopg[binary]~=3.2",
    "django-anymail~=12.0",
    "django-vite~=3.0",
    "pillow~=11.1",
    "django-htmx~=1.21",
    "django-decorator-include~=3.2",
    "django-easy-audit~=1.3",
    "setuptools~=75.8",
    "pycrdt-websocket~=0.16",
    "channels[daphne]~=4.2",
    "channels-redis~=4.2",
    "django-debug-toolbar~=5.0",
    "openpyxl~=3.1",
]

[dependency-groups]
dev = [
    "fabric~=3.2",
]

[tool.pdm]
distribution = false

[tool.pyright]
# Django models define inner `class Meta` which Pyright incorrectly flags as
# incompatible overrides of the base Model.Meta. This is a false positive —
# Django's metaclass handles Meta specially and override compatibility doesn't apply.
reportIncompatibleVariableOverride = "none"
# DRF stubs type GenericAPIView.get_queryset() as returning Never when queryset = objects.none(),
# making all get_queryset() overrides appear incompatible. This is a known stubs limitation.
reportIncompatibleMethodOverride = "none"
